[package]
name = "handoff_counter"
version = "0.8.1"
authors = ["Paulo Sérgio Almeida <pssalmeida@gmail.com>"]
description = "Handoff Counters"
repository = "https://github.com/pssalmeida/handoff_counter-rs"
keywords = ["scalable eventually consistent distributed counters", "CRDT"]
license = "MIT/Apache-2.0"

[dependencies]
rand = "0.3.14"

