[package]
name = "handoff_counter"
version = "0.8.4"
authors = ["Paulo Sérgio Almeida <pssalmeida@gmail.com>"]
description = "Handoff Counters"
repository = "https://github.com/pssalmeida/handoff_counter-rs"
readme = "README.md"
keywords = ["distributed-counters", "CRDT"]
license = "MIT"

[dependencies]
rand = "0.3.14"

